--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "test": "node -e \"console.log('no tests yet')\"",
     "start": "node tanksfornothing-server.js",
-    "dev": "node --watch tanksfornothing-server.js"
+    "dev": "node --watch tanksfornothing-server.js",
+    "setup": "node scripts/init-data.js"
   },
   "keywords": [],
   "author": "",
