--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "dependencies": {
     "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "cookie": "^0.6.0",
+    "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.8.1",
     "three": "^0.179.1"
   }
