--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie": "^0.6.0",
     "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.8.1",
-    "three": "^0.179.1"
+    "three": "^0.179.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
