--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,35 @@
 # .gitignore
-# Summary: Ignore directories and files not intended for version control.
+# Mini README:
+# Purpose: keeps repository clean by excluding build artifacts, logs, and
+#          environment-specific files from version control.
+# Structure:
+#   - Dependencies
+#   - Temporary files
+#   - Build artifacts
+#   - Logs and runtime data
+#   - Environment & OS files
+# Usage: Add new patterns under the appropriate section to prevent accidental
+#        commits of transient files.
+
+# Dependencies
 node_modules/
+
+# Temporary files
 .tmp
+
+# Build artifacts
+dist/
+build/
+
+# Logs and runtime data
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+data/*.db
+
+# Environment & OS files
+.env
+.DS_Store
+
