--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "node tanksfornothing-server.js",
     "dev": "node --watch tanksfornothing-server.js",
     "setup": "node scripts/init-data.js",
-    "lint": "eslint ."
+    "lint": "cross-env ESLINT_USE_FLAT_CONFIG=false eslint ."
   },
   "keywords": [],
   "author": "",
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
+    "cross-env": "^10.0.0",
     "eslint": "^9.34.0",
     "globals": "^16.3.0"
   }
