--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.8.1",
-    "three": "^0.179.1"
+    "three": "^0.179.1",
+    "undici": "^7.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
