--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "npm run build && node dist/server/tanksfornothing-server.js",
     "dev": "ts-node --esm src/server/tanksfornothing-server.ts",
     "setup": "npm run build && node dist/scripts/init-data.js",
-    "lint": "cross-env ESLINT_USE_FLAT_CONFIG=false eslint .",
+    "lint": "eslint .",
     "import-wt": "npm run build && node dist/scripts/import-warthunder-vehicles.js"
   },
   "keywords": [],
@@ -40,8 +40,8 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.2",
-    "cross-env": "^10.0.0",
     "eslint": "^9.34.0",
+    "typescript-eslint": "^8.18.2",
     "globals": "^16.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
