--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@tanksfornothing/shared": "^1.0.0",
     "cannon-es": "^0.20.0",
-    "socket.io-client": "^4.8.1",
+    "colyseus.js": "^0.16.22",
     "three": "^0.180.0"
   },
   "devDependencies": {
