--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,14 +21,15 @@
     "import-wt": "npm run build && node ./dist/src/scripts/import-warthunder-vehicles.js"
   },
   "dependencies": {
+    "@colyseus/ws-transport": "^0.16.5",
     "@tanksfornothing/shared": "^1.0.0",
     "bcryptjs": "^3.0.2",
+    "colyseus": "^0.16.5",
     "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
-    "socket.io": "^4.8.1",
     "undici": "^7.16.0"
   },
   "devDependencies": {
