--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,6 +24,7 @@
     "@colyseus/ws-transport": "^0.16.5",
     "@tanksfornothing/shared": "^1.0.0",
     "bcryptjs": "^3.0.2",
+    "bitecs": "^0.3.40",
     "colyseus": "^0.16.5",
     "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
